--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-certifi==2020.4.5.2
-chardet==3.0.4
-idna==2.9
-Pillow==7.1.2
-pywin32==227
-requests==2.23.0
-urllib3==1.25.9
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
+Pillow==9.1.0
+pywin32==303
+requests==2.27.1
+urllib3==1.26.9
