--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-certifi==2021.10.8
-charset-normalizer==2.0.12
-idna==3.3
-Pillow==9.1.0
-pywin32==303
-requests==2.27.1
-urllib3==1.26.9
+certifi>=2022.5.18.1
+charset-normalizer>=2.0.12
+idna>=3.3
+Pillow>=9.1.1
+pywin32>=304
+requests>=2.28.0
+urllib3>=1.26.9
